introduce choice among libcouplet and libstrophe
add --with-strophe option
build with libcouplet by deafult

--- a/configure.ac
+++ b/configure.ac
@@ -11,19 +11,19 @@ AM_INIT_AUTOMAKE([foreign subdir-objects])
 # Checks for programs.
 AC_PROG_CC
 
+AC_ARG_WITH([strophe],
+    [AS_HELP_STRING([--with-strophe], [use libstrophe instead of libcouplet])])
+
 # Checks for libraries.
 AC_CHECK_LIB([headunit], [main], [], 
     [AC_MSG_NOTICE([headunit not found, will not be able to run tests])])
-
-# Checks for header files.
-AC_CHECK_HEADERS([stdlib.h string.h])
-AC_CHECK_HEADERS([ncurses.h], [], [])
-AC_CHECK_HEADERS([ncurses/ncurses.h], [], [])
+AC_CHECK_LIB([notify], [main], [], 
+    [AC_MSG_NOTICE([libnotify module not found])])
 
 PKG_CHECK_MODULES([libnotify], [libnotify], [], 
     [AC_MSG_NOTICE([libnotify module not found])])
-PKG_CHECK_MODULES([libcouplet], [libcouplet >= 0.8], [],
-    [AC_MSG_ERROR([libcouplet is required for profanity])])
+PKG_CHECK_MODULES([openssl], [openssl], [],
+    [AC_MSG_ERROR([openssl is required for profanity])])
 PKG_CHECK_MODULES([libcurl], [libcurl], [],
     [AC_MSG_ERROR([libcurl is required for profanity])])
 PKG_CHECK_MODULES([ncurses], [ncurses], [],
@@ -31,9 +31,30 @@ PKG_CHECK_MODULES([ncurses], [ncurses], [],
 PKG_CHECK_MODULES([glib], [glib-2.0], [],
     [AC_MSG_ERROR([glib-2.0 is required for profanity])])
 
+if test "x$with_strophe" = xyes; then
+    AC_CHECK_LIB([expat], [main], [],
+        [AC_MSG_ERROR([expat is required for profanity])])
+    AC_CHECK_LIB([xml2], [main], [],
+        [AC_MSG_ERROR([libxml2 is required for profanity])])
+    AC_CHECK_LIB([strophe], [main], [],
+        [AC_MSG_ERROR([libstrophe is required for profanity])])
+else
+    PKG_CHECK_MODULES([libcouplet], [libcouplet >= 0.8], [],
+        [AC_MSG_ERROR([libcouplet is required for profanity])])
+    AC_CHECK_LIB([couplet], [main], [],
+        [AC_MSG_ERROR([libcouplet is required for profanity])])
+    AM_CFLAGS="$AM_CFLAGS $libcouplet_CFLAGS"
+    LIBS="$LIBS $libcouplet_LIBS"
+fi
 
-AM_CFLAGS="-Wall $libnotify_CFLAGS $libcouplet_CFLAGS $libcurl_CFLAGS $ncurses_CFLAGS $glib_CFLAGS "
-LIBS="$LIBS $libcouplet_LIBS $libnotify_LIBS $libcurl_LIBS $ncurses_LIBS $glib_LIBS"
+# Checks for header files.
+AC_CHECK_HEADERS([stdlib.h string.h])
+AC_CHECK_HEADERS([ncurses.h], [], [])
+AC_CHECK_HEADERS([ncurses/ncurses.h], [], [])
+
+AM_CFLAGS="$AM_CFLAGS $libnotify_CFLAGS $libcurl_CFLAGS $ncurses_CFLAGS $glib_CFLAGS"
+AM_CFLAGS="$AM_CFLAGS -Wall"
+LIBS="$LIBS $libnotify_LIBS $openssl_LIBS $libcurl_LIBS $ncurses_LIBS $glib_LIBS"
 
 AC_SUBST(AM_CFLAGS)
 
